# Marvin_sw

./: README.md
MarvinESPIDF/: CMakeLists.txt  platformio.ini
MarvinESPIDF/components/gpi2c/: gpi2c.h
MarvinESPIDF/components/tmf8828_app/: tmf8828.h  tmf8828_app.h  tmf8828_shim.h  tmf882x_image.h
MarvinESPIDF/src/: CMakeLists.txt  audiotaskhandler.c  buttontaskhandler.c  buttontaskhandler.h  led_strip_encoder.c  ledtaskhandler.c  main.c  toftaskhandler.c  toftaskhandler.h
MarvinESPIDF_Test/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
MarvinESPIDF_Test/components/audiomanager/: CMakeLists.txt  audiomanager.h
MarvinESPIDF_Test/components/audioplayer/: CMakeLists.txt  audioplayer.h
MarvinESPIDF_Test/components/audioplayerconfig/: CMakeLists.txt  audioplayerconfig.h
MarvinESPIDF_Test/components/es8388/: CMakeLists.txt  codec_es8388.h
MarvinESPIDF_Test/components/i2smanager/: CMakeLists.txt  i2smanager.h
MarvinESPIDF_Test/components/libmad/: CMakeLists (copy).txt  CMakeLists.txt
MarvinESPIDF_Test/components/tmf8828_app/: CMakeLists.txt  tmf8828_calib.h  tmf8828_image.h  tmf8828_shim.h  tmf882x_calib.h
MarvinESPIDF_Test/components/tmf8828_app/src/: tmf8828_app.c  tmf8828_image.c  tmf8828_shim.c  tmf882x_calib.c  tmf882x_image.c
MarvinESPIDF_Test/src/: audiotaskhandler.c  audiotaskhandler.h  buttentaskhandler.c  buttentaskhandler.h  led_strip_encoder.h  ledtaskhandler.c  ledtaskhandler.h  main.c  toftaskhandler.c  toftaskhandler.h
MavinTestProgramm/: platformio.ini
MavinTestProgramm/src/: main.cpp
(+12 files in other folders)
